# orcha

.github/workflows/: codeql.yml
src/orcha/: CMakeLists.txt  main.cpp  orcha.yaml.example  vcpkg.json
src/orcha/agent/: AuthMiddleware.hpp  CommandAgent.cpp  CommandAgent.hpp  IRouteHandler.hpp  dashboard_embedded.hpp  swagger_embedded.hpp
src/orcha/agent/routes/: DashboardRoute.hpp  HealthRoute.hpp  JobRoute.hpp  PluginAdminRoute.hpp  SwaggerRoute.hpp  WorkflowRoute.hpp
src/orcha/commands/EchoCommand/: EchoCommand.cpp  manifest.json
src/orcha/commands/HttpRequest/: CMakeLists.txt  HttpRequest.cpp  manifest.json
src/orcha/commands/PostgresCreator/: CMakeLists.txt  PostgresCreator.cpp  manifest.json
src/orcha/commands/ShellExec/: CMakeLists.txt  ShellExec.cpp  manifest.json
src/orcha/config/: AdminConfig.hpp  ConfigValidator.hpp  IConfiguration.hpp  YamlConfiguration.cpp  YamlConfiguration.hpp
src/orcha/core/: CircuitBreaker.hpp  CommandRegistry.cpp  CommandRegistry.hpp  DependencyResolver.hpp  ICommand.hpp  ICommandRegistry.hpp  IPluginDiscovery.hpp  PluginDenylist.hpp  PluginManager.cpp  PluginManager.hpp  Result.hpp  ServiceLocator.hpp  Version.hpp.in
src/orcha/docs/: dashboard-phase1.md  dashboard-phase2.md  dashboard-phase3.md
src/orcha/jobs/: CronExpr.hpp  IJobStore.hpp  JobScheduler.cpp  JobScheduler.hpp  JobService.hpp  RunJobCommand.hpp  SqliteJobStore.cpp  SqliteJobStore.hpp
src/orcha/sample_workflows/: http-and-shell.yaml  http-named-steps.yaml
src/orcha/scripts/: admin_smoke.sh
src/orcha/tests/: Assertions.hpp  CronTests.hpp  DependencyResolverTests.hpp  JobStoreTests.hpp  NewFeaturesTests.hpp  PluginAdminTests.hpp  TestFixtures.hpp  test_dependency_resolver_main.cpp  test_new_features_main.cpp
src/orcha/tests/mocks/: MockCommandRegistry.hpp  MockLogger.hpp
src/orcha/tests/unit/: WorkflowEngineTests.cpp
src/orcha/utils/: ILogger.hpp  Logger.cpp  Logger.hpp  YamlToJson.hpp
src/orcha/workflow/: IWorkflowEngine.hpp  ParallelWorkflowExecutor.hpp  RollbackOrchestrator.hpp  WorkflowEngine.cpp  WorkflowEngine.hpp  WorkflowRunner.cpp  WorkflowRunner.hpp
